After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663397 - The panel doesn't correctly apply CSS gradients
The panel doesn't correctly apply CSS gradients
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: general
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-04 13:37 UTC by Dmitry Shachnev
Modified: 2012-03-05 07:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of the issue (33.55 KB, image/png)
2011-11-04 13:37 UTC, Dmitry Shachnev
  Details
git patch 1/1 (2.30 KB, patch)
2012-03-02 21:47 UTC, Peter Hurley
committed Details | Review
Screenshot of themed gradient background [after patch] (38.69 KB, image/png)
2012-03-02 21:52 UTC, Peter Hurley
  Details

Description Dmitry Shachnev 2011-11-04 13:37:25 UTC
Created attachment 200688 [details]
Screenshot of the issue

In Ubuntu, we use the following CSS file for themeing panel:
http://bazaar.launchpad.net/~ubuntu-art-pkg/light-themes/trunk/view/head:/Ambiance/gtk-3.0/apps/gnome-panel.css.

It seems that the gradient code is not working:

PanelWidget, PanelApplet, PanelToplevel {
  background-image: -gtk-gradient (linear, left top, left bottom,
                                   from (shade (@dark_bg_color, 1.5)),
                                   to (shade (@dark_bg_color, 1.05)));
  <...>
}

This works for PanelApplet, but doesn't for PanelToplevel (see the screenshot attached).

As one of users discovered (see https://bugs.launchpad.net/ubuntu/+source/light-themes/+bug/885691), it instead fills the background with the second solid color of the gradient.

// I'm not sure whether it's a bug in Gnome Panel or in Gtk+.
Comment 1 Dmitry Shachnev 2011-11-19 05:52:55 UTC
Reassigning to Gtk+ because it is responsible for parsing & applying css styles.
Comment 2 Dmitry Shachnev 2011-12-17 12:07:19 UTC
@carlosgc: You worked on GtkStyleContext support (http://mail.gnome.org/archives/commits-list/2011-January/msg07791.html), can you please look at this?
Comment 3 Peter Hurley 2012-03-02 21:47:42 UTC
Created attachment 208884 [details] [review]
git patch 1/1

Actually, this is a gnome-panel bug.

The patch comment goes into some detail on the whys and hows of what goes wrong, but the short version is that the pattern set as the background pattern is incorrectly scaled (that is, not scaled). The pattern is actually drawn but the scale is so off that it appears as though it's not a gradient at all.
Comment 4 Peter Hurley 2012-03-02 21:52:27 UTC
Created attachment 208885 [details]
Screenshot of themed gradient background [after patch]

Attached is a screenshot of the panel after the patch was applied. As you can see, the gradient is correct.

(NB: please ignore the separator background. I haven't tracked down if that's a theme or panel bug)
Comment 5 Peter Hurley 2012-03-02 21:55:02 UTC
The screenshot shows the Radiance theme, which is a companion theme to the original reporter' Ambiance theme and distributed in the same dist package.
Comment 6 Vincent Untz 2012-03-05 07:39:13 UTC
Comment on attachment 208884 [details] [review]
git patch 1/1

Thanks, pushed after fixing the coding style.